<resources>
    <string name="app_name">oman tourism guide</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_to">send to</string>
    <string name="title_activity_placeinformation">placeinformation</string>
    <string name="title_activity_places_list">placesList</string>
    <string name="title_activity_home">Home</string>
    <string name="title_placeslist">places</string>
    <string name="homeplaceslist">places</string>
    <string name="homeqr">scan QR</string>
    <string name="homeshareareas" >share areas</string>
    <string name="homeservice">service</string>
    <string name="homeitems">souvenirs</string>
    <string name="load">loading ...</string>
    <string name="closeqr">close</string>
    <string name="title_activity_items_list">souvenirs</string>
    <string name="orderlistby">order list by</string>

    <string-array name="orderlistby_array">
        <item>date</item>
        <item>location</item>
        <item>must likes</item>
    </string-array>
    <string name="title_activity_iteminformation">iteminformation</string>
    <string name="title_activity_services_list">services</string>
    <string name="title_activity_service_providor">ServiceProvidor</string>
    <string name="title_activity_places_items_list">PlacesItemsList</string>
    <string name="user_login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="singin">Sign In</string>
    <string name="createnewaccount">Create New Account</string>
    <string name="forgotpass">Forget Password?</string>
    <string name="login">Login</string>
    <string name="service">Service Provider</string>
    <string name="user">User</string>
    <string name="title_activity_sing_up__user">SingUp_User</string>
    <string name="repassword">Re-Password</string>
    <string name="username">User Name</string>
    <string name="singup">Sing Up</string>
</resources>
