<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.surcas2010dev.eithar.SignIn">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">


    </ScrollView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appicon_image_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        card_view:cardCornerRadius="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/signup_app_icon"
                android:src="@drawable/iconmap"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:hint= "@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/sing_up_usename"
                android:layout_below="@+id/signup_app_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />


            <EditText
            android:gravity="left"
            android:hint= "@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/sing_up_pass"
            android:layout_below="@+id/sing_up_usename"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
            <EditText
                android:gravity="left"
                android:hint= "@string/repassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/sing_up_pass_rep"
                android:layout_below="@+id/sing_up_pass"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <EditText
                android:hint="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/sing_up_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/sing_up_pass_rep"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                style="@style/signinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup"
                android:id="@+id/signin_sininbutton"
                android:layout_below="@+id/sing_up_email"
                android:layout_alignRight="@+id/signin_newaccount"
                android:layout_alignEnd="@+id/signin_newaccount"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:gravity="right"
                style="@style/signinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createnewaccount"
                android:id="@+id/signin_newaccount"
                android:layout_alignTop="@+id/signup_forgotpass_"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                style="@style/signinText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotpass"
                android:id="@+id/signup_forgotpass_"
                android:layout_alignTop="@+id/signin_error_message"
                android:layout_alignRight="@+id/signin_newaccount"
                android:layout_alignEnd="@+id/signin_newaccount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:visibility="invisible"
                android:textColor="@color/error"
                android:layout_marginTop="18dp"
                android:id="@+id/signin_error_message"
                android:layout_below="@+id/signin_sininbutton"
                android:gravity="left" />



        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
